--- a/templates/TimeTrack/base.html
+++ b/templates/TimeTrack/base.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <title>TimeTrack</title>
+    <title>TimeTrack | 拾光轨迹</title>
 
     {% load static %}
     <link href="{% static 'TimeTrack/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -11,7 +12,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">TimeTrack</a>
+        <a class="navbar-brand" href="#">TimeTrack | 拾光轨迹</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,19 +20,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'TimeTrack:index' %}" id="home">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'TimeTrack:index' %}" id="home">{% translate 'Home' %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'TimeTrack:group' %}" id="group">Group</a>
+                    <a class="nav-link" href="{% url 'TimeTrack:group' %}" id="group">{% translate 'Group' %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'TimeTrack:checkin' %}" id="checkin">CheckIn</a>
+                    <a class="nav-link" href="{% url 'TimeTrack:checkin' %}" id="checkin">{% translate 'CheckIn' %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" id="about">About</a>
+                    <a class="nav-link" href="#" id="about">{% translate 'About' %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'registration:register' %}" id="register">Register</a>
+                    <a class="nav-link" href="{% url 'registration:register' %}" id="register">{% translate 'Register' %}</a>
                 </li>
             </ul>
         </div>
@@ -44,7 +45,7 @@
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
                         </svg>
                         {% if not user.is_authenticated %}
-                            <strong class="text-light">Not Logged In</strong>
+                            <strong class="text-light">{% translate 'Not Logged In' %}</strong>
                         {% else %}
                             <strong class="text-light">{{ user }}</strong>
                         {% endif %}
@@ -52,11 +53,11 @@
                 </li>
                 <li class="nav-item">
                     {% if not user.is_authenticated %}
-                        <a class="nav-link" href="{% url 'registration:login' %}" id="login">Login</a>
+                        <a class="nav-link" href="{% url 'registration:login' %}" id="login">{% translate 'Login' %}</a>
                     {% else %}
                         <form method="post" action="{% url 'registration:logout' %}">
                             {% csrf_token %}
-                            <button class="nav-link" style="background: none; border: none" type="submit">Logout
+                            <button class="nav-link" style="background: none; border: none" type="submit">{% translate 'Logout' %}
                             </button>
                         </form>
                     {% endif %}
@@ -75,14 +76,14 @@
                  class="bi bi-calendar-check-fill" viewBox="0 0 16 16">
                 <path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zm-5.146-5.146-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708z"></path>
             </svg>
-            <p class="my-2">Todo</p>
+            <p class="my-2">{% translate 'Todos' %}</p>
         </a>
         <a class="nav-link py-3 border-bottom rounded-0" href="{% url 'TimeTrack:new_group' %}">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                  class="bi bi-calendar2-event-fill" viewBox="0 0 16 16">
                 <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zm9.954 3H2.545c-.3 0-.545.224-.545.5v1c0 .276.244.5.545.5h10.91c.3 0 .545-.224.545-.5v-1c0-.276-.244-.5-.546-.5zM11.5 7a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1z"></path>
             </svg>
-            <p class="my-2">Group</p>
+            <p class="my-2">{% translate 'Groups' %}</p>
         </a>
         <a class="nav-link py-3 border-bottom rounded-0" href="{% url 'TimeTrack:pomodoro' %}">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-alarm"
@@ -90,7 +91,7 @@
                 <path d="M8.5 5.5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5z"/>
                 <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07a7.001 7.001 0 0 0-3.273 12.474l-.602.602a.5.5 0 0 0 .707.708l.746-.746A6.97 6.97 0 0 0 8 16a6.97 6.97 0 0 0 3.422-.892l.746.746a.5.5 0 0 0 .707-.708l-.601-.602A7.001 7.001 0 0 0 9 2.07V1h.5a.5.5 0 0 0 0-1h-3zm1.038 3.018a6.093 6.093 0 0 1 .924 0 6 6 0 1 1-.924 0zM0 3.5c0 .753.333 1.429.86 1.887A8.035 8.035 0 0 1 4.387 1.86 2.5 2.5 0 0 0 0 3.5zM13.5 1c-.753 0-1.429.333-1.887.86a8.035 8.035 0 0 1 3.527 3.527A2.5 2.5 0 0 0 13.5 1z"/>
             </svg>
-            <p class="my-2">Podo<br>romo</p>
+            <p class="my-2">{% translate 'Podoromo' %}</p>
         </a>
         <a class="nav-link py-3 border-bottom rounded-0" href="{% url 'TimeTrack:myDay' %}">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
@@ -98,7 +99,7 @@
                 <path d="M4.968 9.75a.5.5 0 1 0-.866.5A4.498 4.498 0 0 0 8 12.5a4.5 4.5 0 0 0 3.898-2.25.5.5 0 1 0-.866-.5A3.498 3.498 0 0 1 8 11.5a3.498 3.498 0 0 1-3.032-1.75zM7 5.116V5a1 1 0 0 0-1-1H3.28a1 1 0 0 0-.97 1.243l.311 1.242A2 2 0 0 0 4.561 8H5a2 2 0 0 0 1.994-1.839A2.99 2.99 0 0 1 8 6c.393 0 .74.064 1.006.161A2 2 0 0 0 11 8h.438a2 2 0 0 0 1.94-1.515l.311-1.242A1 1 0 0 0 12.72 4H10a1 1 0 0 0-1 1v.116A4.22 4.22 0 0 0 8 5c-.35 0-.69.04-1 .116z"></path>
                 <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-1 0A7 7 0 1 0 1 8a7 7 0 0 0 14 0z"></path>
             </svg>
-            <p class="my-2">MyDay</p>
+            <p class="my-2">{% translate 'MyDay' %}</p>
         </a>
         <a class="nav-link py-3 border-bottom rounded-0" href="{% url 'TimeTrack:calendar' %}">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-calendar3"
@@ -106,7 +107,7 @@
                 <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
                 <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
             </svg>
-            <p class="my-2">Calendar</p>
+            <p class="my-2">{% translate 'Calendar' %}</p>
         </a>
     </div>
 
