--- a/templates/TimeTrack/newGroup.html
+++ b/templates/TimeTrack/newGroup.html
@@ -1,17 +1,11 @@
 {% extends 'TimeTrack/base.html' %}
+{% load i18n %}
 
 {% block content %}
-    {#    <h2>Add New Group</h2>#}
-    {#    <form action="{% url 'TimeTrack:new_group' %}" method="post">#}
-    {#        {% csrf_token %}#}
-    {#        {{ form.as_p }}#}
-    {#        <button name="submit">Add Group</button>#}
-    {#    </form>#}
-    <!-------------------------------------------------------------------------------->
     {% load static %}
     <div class="form-signin w-100 m-auto">
         <img width="300" height="300" src="{% static 'TimeTrack/img/group.svg' %}" alt="new group">
-        <h1 class="mb-3 fw-normal mb-5">Create New Group</h1>
+        <h1 class="mb-3 fw-normal mb-5">{% translate 'Create New Group' %}</h1>
 
         <form method="post" action="{% url 'TimeTrack:new_group' %}">
             {% csrf_token %}
@@ -19,9 +13,9 @@
 
             <div class="form-floating my-lg-5">
                 <input name="name" class="form-control" id="floatingInput" placeholder="name" required>
-                <label for="floatingInput">Name</label>
+                <label for="floatingInput">{% translate 'Name' %}</label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Create</button>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">{% translate 'Create' %}</button>
         </form>
     </div>
 {% endblock %}
