--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,5 +1,6 @@
 {% extends "TimeTrack/base.html" %}
+{% load i18n %}
 
 {% block content %}
-    <p>You have been logged out</p>
+    <p>{% translate 'You have been logged out' %}</p>
 {% endblock %}
