--- a/templates/TimeTrack/group.html
+++ b/templates/TimeTrack/group.html
@@ -25,7 +25,7 @@
                 <div class="on-group accordion-item">
                     <h2 class="accordion-header" id="header-{{ each.id }}" data-group-id="{{ each.id }}">
                         <a style="text-decoration-line: none; background-color: var(--bs-accordion-bg); padding: 3px; height: 42px;"
-                           class="accordion-button nav-item" type="button"
+                           class="accordion-button nav-item pe-3" type="button"
                            data-bs-toggle="collapse"
                            data-bs-target="#collapse-{{ each.id }}" aria-expanded="true"
                            aria-controls="collapse-{{ each.id }}">
