--- a/TimeTrack/static/TimeTrack/css/style.css
+++ b/TimeTrack/static/TimeTrack/css/style.css
@@ -30,12 +30,21 @@
     color: #86b7fe;
     border-left: 3px solid;
     transition: 0.3s;
+    filter: drop-shadow(0 0 25px #86b7fe);
 }
 
 #login:hover {
     color: #e685b5;
     border-left: 3px solid;
     transition: 0.3s;
+    filter: drop-shadow(0 0 25px #e685b5);
+}
+
+#language:hover {
+    color: #a52834;
+    border-left: 3px solid;
+    transition: 0.3s;
+    filter: drop-shadow(0 0 25px #a52834);
 }
 
 .sidebar {
