--- a/templates/language/index.html
+++ b/templates/language/index.html
@@ -2,24 +2,25 @@
 {% load i18n %}
 
 {% block content %}
-    <div style="flex: 1; align-content:center;">
-        <form action="{% url 'set_language' %}" method="post"
-              style="margin-block-end: 0em;">{% csrf_token %}
+    <div class="w-75 mx-auto">
+        <h2>{% translate 'Choose Your Language' %}</h2>
+        <form action="{% url 'set_language' %}" method="post">
+            {% csrf_token %}
             <input name="next" type="hidden" value="{{ redirect_to }}">
-            <select name="language">
+            <label for="choose" class="form-label">{% translate 'Language' %}</label>
+            <select id="choose" class="form-select" name="language">
                 {% get_current_language as LANGUAGE_CODE %}
                 {% get_available_languages as LANGUAGES %}
                 {% get_language_info_list for LANGUAGES as languages %}
                 {% for language in languages %}
-                    <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
+                    <option class="" value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
                             selected{% endif %}>
                         {{ language.name_local }} ({{ language.code }})
                     </option>
                 {% endfor %}
             </select>
 
-            <input type="submit"
-                   value={% translate "Switch" %} style="font-size:12;height:20px">
+            <input type="submit" class="btn btn-outline-primary w-100 my-5" value={% translate "Switch" %}>
         </form>
     </div>
 {% endblock %}
